# mood-music-generator

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
debug/: album_data.yaml  clean_data.ipynb
mood-music-generator/: mood_maker.py  spotify_client.py
