[metadata]
name = mood-music-generator-duckydares
version = 0.0.1
author = Ducky
author_email = dreadducky@protonmail.com
description = A simple mood playlist generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/duckydares/mood-music-generator
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src



